--- a/01_SourceCode/Framework.Tool/Framework.Tool.csproj
+++ b/01_SourceCode/Framework.Tool/Framework.Tool.csproj
@@ -42,6 +42,9 @@
   <ItemGroup>
     <Compile Include="Common\Constants.cs" />
     <Compile Include="Configuration\FrameworkConfiguration.cs" />
+    <Compile Include="Context\BaseResponse.cs" />
+    <Compile Include="Context\ILog.cs" />
+    <Compile Include="Context\Logger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
